--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Portfolio</title>
     </head>
     <body>
         <!--===== HEADER =====-->
